# practical-statistics-for-data-scientists

./: main.py  pyproject.toml
python/notebooks/: Chapter 2 - Data and sampling distributions.ipynb
