[project]
name = "practical-statistics-for-data-scientists"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adjusttext>=1.4.0",
    "dmba>=0.2.4",
    "imblearn>=0.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "prince>=0.19.0",
    "pydotplus>=2.0.2",
    "pygam>=0.12.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "wquantiles>=0.6",
    "xgboost>=3.2.0",
]
